@@ -16,7 +16,17 @@
 			document.additem.tariffid.value = '{$tariff.id}';
 		{literal}}{/literal}
 		{/foreach}
-	{literal}}{/literal}
+	{literal}}
+	
+	function saveheader()
+	{
+	        if(document.setcustomer.customer)
+	                if(document.setcustomer.customer.value)
+	                        document.setcustomer.customerid.value = document.setcustomer.customer.value;
+	
+	        document.setcustomer.submit();
+	}															
+	{/literal}
 	//-->
 </script>		
 <FORM NAME="setcustomer" METHOD="POST" ACTION="?m=invoicenew&action=setcustomer">
@@ -109,7 +119,7 @@
 	</TR>
 	<TR CLASS="light">
 		<TD CLASS="fbottomu" WIDTH="100%" ALIGN="right" COLSPAN="2">
-			<A HREF="javascript:document.setcustomer.submit();">{t}Submit{/t} <IMG SRC="img/save.gif" ALT=""></A>
+			<A HREF="javascript: saveheader();">{t}Submit{/t} <IMG SRC="img/save.gif" ALT=""></A>
 		</TD>
 	</TR>
 </TABLE>
