@@ -20,6 +20,7 @@ version ? (????-??-??):
   - setting last reload time for reloads of type 'exec' (alec)
   - BTS#0000547: fixed items count on invoice note when invoice position
     is deleted (alec)
+  - fixed customer selection in invoices and receipts (alec)
 
 version 1.9.1 Jumar (2006-02-13):
 
